tests/integration/errors/pact_missing_method.rsg
// TEST: compile_error
// EXPECT-ERROR: missing required method 'to_string' from pact 'Printable'
module test_err

pact Printable {
    fn to_string() -> str
}

struct Foo: Printable {
    x: i32 = 0
}

fn main() {
    f := Foo {}
}
